--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<li class="nav-item"><a class="nav-link px-3 cool-link" href="#about" id="aboutColor">ABOUT</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#projects">PROJECTS</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#contact">CONTACT</a></li>
-				<li class="nav-item"><a class="nav-link px-3  cool-link" href="pages/blog.html">BLOGs</a></li>
+				<li class="nav-item"><a class="nav-link px-3  cool-link" href="pages/blog.html">BLOG</a></li>
 			</ul>
 		</div>
 
@@ -54,7 +54,7 @@
 				<h1>Hi</h1>
 				<p>I am a postgraduate at Georgia Institute of Technology, working in the field of Human–Computer Interaction.
 					My objective is to help
-					<span class="notice"><em>&nbsp;Simplify&nbsp; </em></span> 
+					<span class="notice">&nbsp;Simplify&nbsp; </span> 
 					<!-- <font color="#AC3B61" ><em>Simplify</em></font>  -->
 					technology so that 
 					<span class="notice">novice developers can learn quickly</span>
@@ -64,7 +64,7 @@
 
 				<section id="projects"></section>
 
-				<p><a href="#" id="arrow" class="parent"><strong>Read More&nbsp;&nbsp;&nbsp;</strong>
+				<p><a href="resume_varnit_jain.pdf" id="arrow" class="parent"><strong>Read More&nbsp;&nbsp;&nbsp;</strong>
 					<i class="fa">&#xf054;</i>
 
 				</a></p>
@@ -86,8 +86,8 @@
 							</h3>
 							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon-min.png"></div>
-							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-							<a href="#">Continue Reading</a>
+							<p class="card-text mb-auto">A toolkit which allows VR developers to build a physical-manipulation enabled controller of any shape or size.</p>
+							<!-- <a href="#">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -102,8 +102,8 @@
 							</h3>
 							<div class="mb-1 text-muted">UIST 2018, SIC</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon-min.png"></div>
-							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-							<a href="#">Continue Reading</a>
+							<p class="card-text mb-auto">A robot which can be controlled using music and speech.</p>
+							<!-- <a href="#">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -119,10 +119,10 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="#">Mime</a>
 							</h3>
-							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
+							<div class="mb-1 text-muted">Android Store</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
-							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-							<a href="#">Continue Reading</a>
+							<p class="card-text mb-auto">A platform which empowers people who lack photo/video editing skills to become a part of the meme conversation. </p>
+							<!-- <a href="#">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -135,10 +135,10 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="#">Effective Traffic Management</a>
 							</h3>
-							<div class="mb-1 text-muted">UIST 2018, SIC</div>
+							<div class="mb-1 text-muted">Delhi Traffic Police</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
-							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-							<a href="#">Continue Reading</a>
+							<p class="card-text mb-auto">A project in collaboration with the Delhi Traffic Police which aims to automate parts of the traffic management process.</p>
+							<!-- <a href="#">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -154,10 +154,10 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="#">Fake News</a>
 							</h3>
-							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
+							<div class="mb-1 text-muted">Research Experience</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
-							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-							<a href="#">Continue Reading</a>
+							<p class="card-text mb-auto">Fake News detection by integrating multiple modalities such as text, images, video, etc. in a single model. </p>
+							<!-- <a href="#">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -170,10 +170,10 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="#">Beatdrop</a>
 							</h3>
-							<div class="mb-1 text-muted">UIST 2018, SIC</div>
+							<div class="mb-1 text-muted">Design 360, 2016</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
-							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-							<a href="#">Continue Reading</a>
+							<p class="card-text mb-auto">Conceptualised and designed for a design hackathon, BeatDrop is a social media platform that connects users based on their music interests.</p>
+							<!-- <a href="#">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -189,10 +189,10 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="#">Autovend</a>
 							</h3>
-							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
+							<div class="mb-1 text-muted">Physical Product at Multiple MNCs</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
-							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-							<a href="#">Continue Reading</a>
+							<p class="card-text mb-auto">A vending machine which aims to improve the customer experience while purchasing food items, the customers can just pick products and walk away.</p>
+							<!-- <a href="#">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -205,10 +205,10 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="#">Braille Printer</a>
 							</h3>
-							<div class="mb-1 text-muted">UIST 2018, SIC</div>
+							<div class="mb-1 text-muted">Best Freshman Project</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
-							<p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-							<a href="#">Continue Reading</a>
+							<p class="card-text mb-auto">A prototype of a Braille printer under $5 using old CD/DVDs.</p>
+							<!-- <a href="#">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -249,11 +249,11 @@
 
 
 		<div class="container footer-icons">
-			<img src="icons/mail-grey.png" alt="Avatar" class="image-footer">
-			<img src="icons/linkedin-grey.png" alt="Avatar" class="image-footer">
-			<img src="icons/github-grey.png" alt="Avatar" class="image-footer">
-			<img src="icons/rg-grey.png" alt="Avatar" class="image-footer">
-			<img src="icons/instagram-grey.png" alt="Avatar" class="image-footer">
+			<a href="mailto:name@email.com"><img src="icons/mail-grey.png" alt="Avatar" class="image-footer"></a>
+			<a href="https://www.linkedin.com/in/varnitjain/" target="_blank"><img src="icons/linkedin-grey.png" alt="Avatar" class="image-footer"></a>
+			<a href="https://github.com/varnit15112" target="_blank"><img src="icons/github-grey.png" alt="Avatar" class="image-footer"></a>
+			<a href="https://www.researchgate.net/profile/Varnit_Jain2" target="_blank"><img src="icons/rg-grey.png" alt="Avatar" class="image-footer"></a>
+			<a href="https://www.instagram.com/ordinarygazer/" target="_blank"><img src="icons/instagram-grey.png" alt="Avatar" class="image-footer"></a>
 <!-- 
 			<a id="home" class="container footer-icons">
 				<img class="image_on image-footer" src="icons/instagram-grey.png" alt="logo" />
