--- a/pages/blog.html
+++ b/pages/blog.html
@@ -73,7 +73,46 @@
 
 	<footer class="footer-basic-centered foot-shadow" id="contact">
 
-		<p class="footer-company-motto">The company motto.</p>
+		<p class="footer-company-motto">Contact</p>
+
+		<style type="text/css">
+			.card1 {
+				width: 130px;
+				height: 195px;
+				position: relative;
+				display: inline-block;
+				margin: 50px;
+			}
+			.card1 .img-top {
+				display: none;
+				position: absolute;
+				top: 0;
+				left: 0;
+				z-index: 99;
+			}
+			.card1:hover .img-top {
+				display: inline;
+			}
+		</style>
+
+
+		<div class="container footer-icons">
+			<a href="mailto:name@email.com"><img src="../icons/mail-grey.png" alt="Avatar" class="image-footer"></a>
+			<a href="https://www.linkedin.com/in/varnitjain/" target="_blank"><img src="../icons/linkedin-grey.png" alt="Avatar" class="image-footer"></a>
+			<a href="https://github.com/varnit15112" target="_blank"><img src="../icons/github-grey.png" alt="Avatar" class="image-footer"></a>
+			<a href="https://www.researchgate.net/profile/Varnit_Jain2" target="_blank"><img src="../icons/rg-grey.png" alt="Avatar" class="image-footer"></a>
+			<a href="https://www.instagram.com/ordinarygazer/" target="_blank"><img src="../icons/instagram-grey.png" alt="Avatar" class="image-footer"></a>
+<!-- 
+			<a id="home" class="container footer-icons">
+				<img class="image_on image-footer" src="icons/instagram-grey.png" alt="logo" />
+				<img class="image_off image-footer" src="icons/instagram-red.png" alt="logo" />
+			</a> -->
+
+
+		</div>
+
+
+<!-- 
 
 		<p class="footer-links">
 			<a href="#">Home</a>
@@ -87,12 +126,9 @@
 			<a href="#">Faq</a>
 			·
 			<a href="#">Contact</a>
-		</p>
-
-		<p class="footer-company-name">Company Name &copy; 2015</p>
+		</p> -->
 
 	</footer>
-
 
 
 	<script>
