--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 					<span class="notice">novice developers can learn quickly</span>
 					and
 					<span class="notice">a new wave of people get access to technology.</span>
+
+					<br><p font-size="5px">(Portfolio Under Construction, click Read More for CV)</p>
 				</p>
 
 				<section id="projects"></section>
@@ -189,7 +191,7 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="#">Autovend</a>
 							</h3>
-							<div class="mb-1 text-muted">Physical Product at Multiple MNCs</div>
+							<div class="mb-1 text-muted">Physical Product at 3 MNCs</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
 							<p class="card-text mb-auto">A vending machine which aims to improve the customer experience while purchasing food items, the customers can just pick products and walk away.</p>
 							<!-- <a href="#">Continue Reading</a> -->
