--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Virtual Bricks</a>
+								<a class="text-dark" href="">Virtual Bricks</a>
 							</h3>
 							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon-min.png"></div>
 							<p class="card-text mb-auto">A toolkit which allows VR developers to build a physical-manipulation enabled controller of any shape or size.</p>
-							<!-- <a href="#">Continue Reading</a> -->
+							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -100,12 +100,12 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Jamoora</a>
+								<a class="text-dark" href="">Jamoora</a>
 							</h3>
 							<div class="mb-1 text-muted">UIST 2018, SIC</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon-min.png"></div>
 							<p class="card-text mb-auto">A robot which can be controlled using music and speech.</p>
-							<!-- <a href="#">Continue Reading</a> -->
+							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -119,12 +119,12 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Mime</a>
+								<a class="text-dark" href="">Mime</a>
 							</h3>
 							<div class="mb-1 text-muted">Android Store</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
 							<p class="card-text mb-auto">A platform which empowers people who lack photo/video editing skills to become a part of the meme conversation. </p>
-							<!-- <a href="#">Continue Reading</a> -->
+							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -135,12 +135,12 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Effective Traffic Management</a>
+								<a class="text-dark" href="">Effective Traffic Management</a>
 							</h3>
 							<div class="mb-1 text-muted">Delhi Traffic Police</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
 							<p class="card-text mb-auto">A project in collaboration with the Delhi Traffic Police which aims to automate parts of the traffic management process.</p>
-							<!-- <a href="#">Continue Reading</a> -->
+							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -154,12 +154,12 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Fake News</a>
+								<a class="text-dark" href="">Fake News</a>
 							</h3>
 							<div class="mb-1 text-muted">Research Experience</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
 							<p class="card-text mb-auto">Fake News detection by integrating multiple modalities such as text, images, video, etc. in a single model. </p>
-							<!-- <a href="#">Continue Reading</a> -->
+							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -170,12 +170,12 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Beatdrop</a>
+								<a class="text-dark" href="">Beatdrop</a>
 							</h3>
 							<div class="mb-1 text-muted">Design 360, 2016</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
 							<p class="card-text mb-auto">Conceptualised and designed for a design hackathon, BeatDrop is a social media platform that connects users based on their music interests.</p>
-							<!-- <a href="#">Continue Reading</a> -->
+							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -189,12 +189,12 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Autovend</a>
+								<a class="text-dark" href="">Autovend</a>
 							</h3>
 							<div class="mb-1 text-muted">Physical Product at 3 MNCs</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
 							<p class="card-text mb-auto">A vending machine which aims to improve the customer experience while purchasing food items, the customers can just pick products and walk away.</p>
-							<!-- <a href="#">Continue Reading</a> -->
+							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -205,12 +205,12 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="#">Braille Printer</a>
+								<a class="text-dark" href="">Braille Printer</a>
 							</h3>
 							<div class="mb-1 text-muted">Best Freshman Project</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="images/mime-icon.png"></div>
 							<p class="card-text mb-auto">A prototype of a Braille printer under $5 using old CD/DVDs.</p>
-							<!-- <a href="#">Continue Reading</a> -->
+							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -269,17 +269,17 @@
 <!-- 
 
 		<p class="footer-links">
-			<a href="#">Home</a>
+			<a href="">Home</a>
 			·
-			<a href="#">Blog</a>
+			<a href="">Blog</a>
 			·
-			<a href="#">Pricing</a>
+			<a href="">Pricing</a>
 			·
-			<a href="#">About</a>
+			<a href="">About</a>
 			·
-			<a href="#">Faq</a>
+			<a href="">Faq</a>
 			·
-			<a href="#">Contact</a>
+			<a href="">Contact</a>
 		</p> -->
 
 	</footer>
