--- a/pages/autovend.html
+++ b/pages/autovend.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Varnit Jain | Blog</title>
+	<title>Varnit Jain | Autovend</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -52,9 +52,15 @@
 
 		<div class="jumbotron">
 			<div class="container">
-				<p align="center">Coming Soon</p>
+				<p align="center"><strong>Autovend</strong></p>
 
-				<h1 align="center" id="demo" class="countdown"></h1>
+				Autovend is an automatic vending machine which aims to improve the customer experience while purchasing food items. To purchase a food item, a user just has to press a button in an app to unlock the fridge, he/she can just walk away with the food, and will be billed automatically.<br>
+
+				Autovend has a two fold system to detect the objects being taken out. The first system is to detect the radio-frequency (RF) tags that are put on each food item. The second system is to detect which object is taken out using realtime object detection using two cameras. The result from the two system is combined to finally detect the food items that are taken out and the user is billed automatically.<br>
+
+				Autovend has been deployed in front of the hostel at our university where about 20 food items are sold every day. <br><br><br><br>
+
+				<img src="autovend.jpeg" width="50%" align="center">
 				
 			</div>
 
@@ -71,7 +77,7 @@
 
 	<!-- <hr width="90%"/> -->
 
-		<footer class="footer-basic-centered foot-shadow" id="contact">
+	<footer class="footer-basic-centered foot-shadow" id="contact">
 
 		<p class="footer-company-motto">Contact</p>
 
