--- a/pages/braille.html
+++ b/pages/braille.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Varnit Jain | Blog</title>
+	<title>Varnit Jain | Braille Printer</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -21,8 +21,6 @@
 
 <body bgcolor="#afafaf" data-spy="scroll" data-target="#navbarNav">
 
-	<!-- <section id="about"></section> -->
-	<section id="blog"></section>
 
 	<nav class="navbar navbar-expand-lg navbar-light navbar-custom bg-white fixed-top">
 
@@ -52,10 +50,16 @@
 
 		<div class="jumbotron">
 			<div class="container">
-				<p align="center">Coming Soon</p>
+				<p align="center"><strong>Brailler Printer</strong></p>
 
-				<h1 align="center" id="demo" class="countdown"></h1>
+				In my freshman studies, we built a prototype for a braille printer. A user could type in a message on his/her phone and the printer would print that message on a sheet in braille. <br>
+
+				We built a 3axis cnc using Servo motors from old CD/DVD drives. The chasis was built using old wooden peices from disposed furniture. The casing of the CD drivers was used to build the base and the back support. We used a bluetooth module for communication. We plugged all the motors through motor drivers and used an Arduino for processing everything. The whole system cost about $5 (we borrowed the arduino). <br>
+
+				We won the best project award and were selected for showcase at the Delhi Mini Maker Fair in front of an audiance of about five hundred people. <br> <br> <br>
 				
+				<img src="braille.jpg" width="50%" align="center">
+
 			</div>
 
 
@@ -71,7 +75,7 @@
 
 	<!-- <hr width="90%"/> -->
 
-		<footer class="footer-basic-centered foot-shadow" id="contact">
+	<footer class="footer-basic-centered foot-shadow" id="contact">
 
 		<p class="footer-company-motto">Contact</p>
 
