--- a/pages/fake.html
+++ b/pages/fake.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Varnit Jain | Blog</title>
+	<title>Varnit Jain | Fake News</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -52,10 +52,12 @@
 
 		<div class="jumbotron">
 			<div class="container">
-				<p align="center">Coming Soon</p>
+				<p align="center"><strong>Fake News</strong></p>
 
-				<h1 align="center" id="demo" class="countdown"></h1>
-				
+				Fake news is spreading like wildfire across all media consumption platforms like Facebook, Twitter, Instagram and has recently started making its way into contemporary Instant Messaging Platforms (IMs) like Whatsapp. In the case of news on social media platforms, we have a lot of information available like it’s user, likes, shares, propagation pathways, etc. Fake news can be used for a number of malicious reasons such as political agendas, personal agendas, provide bogus health services, etc. We can study patterns to detect which news articles are reliable and which aren’t; a lot of this information can also be attributed to the users responsible for spreading the fake news article. However, this information isn’t available in the case of IMs. So we want to build a general solution which detects fake news only on the basis of content and doesn’t rely on any network information. This will enable our model to be replicable on any OSM or IM or any network with modalities incorporated in our model. <br>
+
+				<img src="fake.jpg" width="90%" align="center">
+
 			</div>
 
 
