--- a/pages/traffic.html
+++ b/pages/traffic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Varnit Jain | Blog</title>
+	<title>Varnit Jain | Automatic Traffic Management</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -22,7 +22,6 @@
 <body bgcolor="#afafaf" data-spy="scroll" data-target="#navbarNav">
 
 	<!-- <section id="about"></section> -->
-	<section id="blog"></section>
 
 	<nav class="navbar navbar-expand-lg navbar-light navbar-custom bg-white fixed-top">
 
@@ -52,9 +51,13 @@
 
 		<div class="jumbotron">
 			<div class="container">
-				<p align="center">Coming Soon</p>
+				<p align="center"><strong>Automatic Traffic Management</strong></p>
 
-				<h1 align="center" id="demo" class="countdown"></h1>
+				Traffic congestion is a major concern in highly populated metropolitan cities like Delhi, Bangalore, Hyderabad, etc. In developing countries like India, most of the traffic management is done manually. While building better roads, new flyovers, etc help reduce traffic congestion, we ask the question if existing resources are being used optimally. The aim of our project is to assist the traffic management authorities in Delhi by automating some management processes. Our project is two fold - automate congestion detection and to help the local traffic cop with efficient traffic management by providing a real-time traffic analysis. <br>
+
+				We are working with in collaboration with the Delhi Traffic Police where we are making a congestion notification platform and a traffic analysis app for the local traffic cop. Our major contribution lies in the fact that we do not any more infrastructure in terms of traffic monitoring cameras, vehicle counters, etc. We're using a combination of various online APIs to analyse and predict traffic conditions.<br>
+
+				This work will be made public by the Delhi Traffic Police in 2019.<br><br>
 				
 			</div>
 
@@ -71,7 +74,7 @@
 
 	<!-- <hr width="90%"/> -->
 
-		<footer class="footer-basic-centered foot-shadow" id="contact">
+	<footer class="footer-basic-centered foot-shadow" id="contact">
 
 		<p class="footer-company-motto">Contact</p>
 
