--- a/pages/beat.html
+++ b/pages/beat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Varnit Jain | Blog</title>
+	<title>Varnit Jain | Beat Drop</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
