--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					and
 					<span class="notice">a new wave of people get access to technology.</span>
 
-					<br><p font-size="5px">(Portfolio Under Construction, click Read More for CV)</p>
+					<br><p font-size="5px">(Portfolio Under Construction, click Read More for Resume)</p>
 				</p>
 
 				<section id="projects"></section>
@@ -87,7 +87,7 @@
 								<a class="text-dark" href="https://dl.acm.org/citation.cfm?id=3300286" target="_blank">Virtual Bricks</a>
 							</h3>
 							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/virtual.png"></div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/virtual-min.png"></div>
 							<p class="card-text mb-auto">A toolkit which allows VR developers to build a physical-manipulation enabled controller of any shape or size.</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
@@ -103,7 +103,7 @@
 								<a class="text-dark" href="https://drive.google.com/file/d/1JBZFCedsuWwECqDuQtfXcLK1wuzRsk0c/view?usp=sharing" target="_blank">Jamoora</a>
 							</h3>
 							<div class="mb-1 text-muted">UIST 2018, SIC</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/jamoora.png"></div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/jamoora-min.png"></div>
 							<p class="card-text mb-auto">A robot which can be controlled using music and speech.</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
@@ -122,7 +122,7 @@
 								<a class="text-dark" href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">Mime</a>
 							</h3>
 							<div class="mb-1 text-muted">Android Store</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/mime.png"></div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/mime-min.png"></div>
 							<p class="card-text mb-auto">A platform which empowers people who lack photo/video editing skills to become a part of the meme conversation. </p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
@@ -135,10 +135,10 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="http://abhinavthukral.in/projects/beatdrop/">Beatdrop</a>
+								<a class="text-dark" href="http://abhinavthukral.in/projects/beatdrop/" target="_blank">Beatdrop</a>
 							</h3>
 							<div class="mb-1 text-muted">Design 360, 2016</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/beat.png"></div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/beat-min2.png"></div>
 							<p class="card-text mb-auto">Conceptualised and designed for a design hackathon, BeatDrop is a social media platform that connects users based on their music interests.</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
@@ -154,10 +154,10 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="pages/fake.html">Fake News</a>
+								<a class="text-dark" href="pages/fake.html" target="_blank">Fake News</a>
 							</h3>
 							<div class="mb-1 text-muted">Research Experience</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/fake.png"></div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/fake-min.png"></div>
 							<p class="card-text mb-auto">Fake News detection by integrating multiple modalities such as text, images, video, etc. in a single model. </p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
@@ -172,10 +172,10 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="pages/traffic.html">Effective Traffic Management</a>
+								<a class="text-dark" href="pages/traffic.html" target="_blank">Effective Traffic Management</a>
 							</h3>
 							<div class="mb-1 text-muted">Delhi Traffic Police</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/traffic.png"></div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/traffic-min.png"></div>
 							<p class="card-text mb-auto">A project in collaboration with the Delhi Traffic Police which aims to automate parts of the traffic management process.</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
@@ -191,10 +191,10 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="pages/autovend.html">Autovend</a>
+								<a class="text-dark" href="pages/autovend.html" target="_blank">Autovend</a>
 							</h3>
 							<div class="mb-1 text-muted">Physical Product at 3 MNCs</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/autovend.png"></div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/autovend-min.png"></div>
 							<p class="card-text mb-auto">A vending machine which aims to improve the customer experience while purchasing food items, the customers can just pick products and walk away.</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
@@ -207,10 +207,10 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="pages/braille.html">Braille Printer</a>
+								<a class="text-dark" href="pages/braille.html" target="_blank">Braille Printer</a>
 							</h3>
 							<div class="mb-1 text-muted">Best Freshman Project</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/braille.png"></div>
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/braille-min2.png"></div>
 							<p class="card-text mb-auto">A prototype of a Braille printer under $5 using old CD/DVDs.</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
