--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 					and
 					<span class="notice">a new wave of people get access to technology.</span>
 
-					<br><p font-size="5px">(Portfolio Under Construction, click Read More for Resume)</p>
+					<br><p font-size="5px"></p>
 				</p>
 
 				<section id="projects"></section>
 
-				<p><a href="resume_varnit_jain.pdf" id="arrow" class="parent"><strong>Read More&nbsp;&nbsp;&nbsp;</strong>
+				<p><a href="resume_varnit_jain.pdf" id="arrow" class="parent"><strong>Resume&nbsp;&nbsp;&nbsp;</strong>
 					<i class="fa">&#xf054;</i>
 
 				</a></p>
