--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 				<section id="projects"></section>
 
-				<p><a href="resume_varnit_jain.pdf" id="arrow" class="parent"><strong>Resume&nbsp;&nbsp;&nbsp;</strong>
+				<p><a href="resume_varnit_jain.pdf" id="arrow" class="parent" target="_blank"><strong>Resume&nbsp;&nbsp;&nbsp;</strong>
 					<i class="fa">&#xf054;</i>
 
 				</a></p>
@@ -121,7 +121,7 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">Mime</a>
 							</h3>
-							<div class="mb-1 text-muted">Android Store</div>
+							<div class="mb-1 text-muted">Android Play Store - 2019</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/mime-min.png"></div>
 							<p class="card-text mb-auto">A platform which empowers people who lack photo/video editing skills to become a part of the meme conversation. </p>
 							<!-- <a href="">Continue Reading</a> -->
@@ -148,18 +148,16 @@
 
 			</div>
 
-			<div class="row mb-2">
+			<!-- <div class="row mb-2">
 				<div class="col-md-6">
 					<div class="card flex-md-row mb-4 box-shadow h-md-250">
 						<div class="card-body d-flex flex-column align-items-start">
-							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
 								<a class="text-dark" href="pages/fake.html" target="_blank">Fake News</a>
 							</h3>
 							<div class="mb-1 text-muted">Research Experience</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/fake-min.png"></div>
 							<p class="card-text mb-auto">Fake News detection by integrating multiple modalities such as text, images, video, etc. in a single model. </p>
-							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -170,20 +168,18 @@
 				<div class="col-md-6">
 					<div class="card flex-md-row mb-4 box-shadow h-md-250">
 						<div class="card-body d-flex flex-column align-items-start">
-							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
 								<a class="text-dark" href="pages/traffic.html" target="_blank">Effective Traffic Management</a>
 							</h3>
 							<div class="mb-1 text-muted">Delhi Traffic Police</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/traffic-min.png"></div>
 							<p class="card-text mb-auto">A project in collaboration with the Delhi Traffic Police which aims to automate parts of the traffic management process.</p>
-							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
 				</div>
 
-			</div>
+			</div> -->
 
 			<div class="row mb-2">
 				<div class="col-md-6">
@@ -193,7 +189,7 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="pages/autovend.html" target="_blank">Autovend</a>
 							</h3>
-							<div class="mb-1 text-muted">Physical Product at 3 MNCs</div>
+							<div class="mb-1 text-muted">Successful Startup - 2017</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/autovend-min.png"></div>
 							<p class="card-text mb-auto">A vending machine which aims to improve the customer experience while purchasing food items, the customers can just pick products and walk away.</p>
 							<!-- <a href="">Continue Reading</a> -->
