--- a/index.html
+++ b/index.html
@@ -86,9 +86,12 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="https://dl.acm.org/citation.cfm?id=3300286" target="_blank">Virtual Bricks</a>
 							</h3>
-							<div class="mb-1 text-muted">CHI 2019, Full Paper</div>
+							<div class="mb-1 text-muted">Full Paper CHI - 2019</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/virtual-min.png"></div>
-							<p class="card-text mb-auto">A toolkit which allows VR developers to build a physical-manipulation enabled controller of any shape or size.</p>
+							<p class="card-text mb-auto midText">A toolkit which allows VR developers to build a physical-manipulation enabled controller of any shape or size.</p>
+							<p class="card-text mb-auto downText">
+								VR Developement, Arduino Communication
+							</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
@@ -102,9 +105,12 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="https://drive.google.com/file/d/1JBZFCedsuWwECqDuQtfXcLK1wuzRsk0c/view?usp=sharing" target="_blank">Jamoora</a>
 							</h3>
-							<div class="mb-1 text-muted">UIST 2018, SIC</div>
+							<div class="mb-1 text-muted">SIC UIST - 2018</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/jamoora-min.png"></div>
-							<p class="card-text mb-auto">A robot which can be controlled using music and speech.</p>
+							<p class="card-text mb-auto midText">A robot which can be controlled using music and speech.</p>
+							<p class="card-text mb-auto downText">
+								Animatronics, Speech Recognition, Parallel Processing 
+							</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
@@ -123,8 +129,10 @@
 							</h3>
 							<div class="mb-1 text-muted">Android Play Store - 2019</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/mime-min.png"></div>
-							<p class="card-text mb-auto">A platform which empowers people who lack photo/video editing skills to become a part of the meme conversation. </p>
-							<!-- <a href="">Continue Reading</a> -->
+							<p class="card-text mb-auto midText">A platform which empowers people who lack photo/video editing skills to become a part of the meme conversation. </p>
+							<p class="card-text mb-auto downText">
+								Requirements Gathering, Prototyping, User Feedback, Android Development, Firebase Development, User Testing 
+							</p>
 						</div>
 
 					</div>
@@ -137,9 +145,12 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="http://abhinavthukral.in/projects/beatdrop/" target="_blank">Beatdrop</a>
 							</h3>
-							<div class="mb-1 text-muted">Design 360, 2017</div>
+							<div class="mb-1 text-muted">Design Sprint - 2017</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/beat-min2.png"></div>
-							<p class="card-text mb-auto">Conceptualised and designed for a design hackathon, BeatDrop is a social media platform that connects users based on their music interests.</p>
+							<p class="card-text mb-auto midText">Conceptualised and designed for a design hackathon, BeatDrop is a social media platform that connects users based on their music interests.</p>
+							<p class="card-text mb-auto downText">
+								Requirements Gathering, Paper Prototyping, User Feedback, HiFi Prototyping 
+							</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
@@ -191,7 +202,10 @@
 							</h3>
 							<div class="mb-1 text-muted">Successful Startup - 2017</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/autovend-min.png"></div>
-							<p class="card-text mb-auto">A vending machine which aims to improve the customer experience while purchasing food items, the customers can just pick products and walk away.</p>
+							<p class="card-text mb-auto midText">A vending machine which aims to improve the customer experience while purchasing food items, the customers can just pick products and walk away.</p>
+							<p class="card-text mb-auto downText">
+								Information Architecture, Parallel Computing, Computer Vision 
+							</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
@@ -205,9 +219,12 @@
 							<h3 class="mb-0">
 								<a class="text-dark" href="pages/braille.html" target="_blank">Braille Printer</a>
 							</h3>
-							<div class="mb-1 text-muted">Best Freshman Project</div>
+							<div class="mb-1 text-muted">Best Freshman Project - 2015</div>
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/braille-min2.png"></div>
-							<p class="card-text mb-auto">A prototype of a Braille printer under $5 using old CD/DVDs.</p>
+							<p class="card-text mb-auto midText">A prototype of a Braille printer under $5 using old CD/DVDs.</p>
+							<p class="card-text mb-auto downText">
+								Arduino Sensors, Chassis Design  
+							</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
