--- a/index.html
+++ b/index.html
@@ -84,13 +84,14 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="https://dl.acm.org/citation.cfm?id=3300286" target="_blank">Virtual Bricks</a>
+								<a class="text-dark" href="pages/sherpa.html">Sherpa</a>
 							</h3>
-							<div class="mb-1 text-muted">Full Paper CHI - 2019</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/virtual-min.png"></div>
-							<p class="card-text mb-auto midText">A toolkit which allows VR developers to build a physical-manipulation enabled controller of any shape or size.</p>
+							<div class="mb-1 text-muted">CS6755 - 2019</div>
+							<a class="text-dark" href="pages/sherpa.html">
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/sherpa-min.png"></div></a>
+							<p class="card-text mb-auto midText">An application that helps cyclists perform maintenance and repair tasks.</p>
 							<p class="card-text mb-auto downText">
-								VR Developement, Arduino Communication
+								Requirements Gathering, UX Design, Usability Testing
 							</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
@@ -103,13 +104,14 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="https://drive.google.com/file/d/1JBZFCedsuWwECqDuQtfXcLK1wuzRsk0c/view?usp=sharing" target="_blank">Jamoora</a>
+								<a class="text-dark" href="pages/unav.html" >uNav Compat</a>
 							</h3>
-							<div class="mb-1 text-muted">SIC UIST - 2018</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/jamoora-min.png"></div>
-							<p class="card-text mb-auto midText">A robot which can be controlled using music and speech.</p>
+							<div class="mb-1 text-muted">NCR - 2019</div>
+							<a class="text-dark" href="pages/unav.html" >
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/unav-min.png"></div></a>
+							<p class="card-text mb-auto midText">An accessibility mode which makes NCR's Kiosks accessible for wheelchair users.</p>
 							<p class="card-text mb-auto downText">
-								Animatronics, Speech Recognition, Parallel Processing 
+								UX Research, Accessibility Research, Usability Testing 
 							</p>
 							<!-- <a href="">Continue Reading</a> -->
 						</div>
@@ -125,10 +127,32 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
+								<a class="text-dark" href="https://dl.acm.org/citation.cfm?id=3300286" target="_blank">Virtual Bricks</a>
+							</h3>
+							<div class="mb-1 text-muted">Full Paper CHI - 2019</div>
+							<a class="text-dark" href="https://dl.acm.org/citation.cfm?id=3300286" target="_blank">
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/virtual-min.png"></div></a>
+							<p class="card-text mb-auto midText">A toolkit which allows VR developers to build a physical-manipulation enabled controller of any shape or size.</p>
+							<p class="card-text mb-auto downText">
+								VR Developement, Arduino Communication
+							</p>
+							<!-- <a href="">Continue Reading</a> -->
+						</div>
+
+					</div>
+				</div>
+
+				
+				<div class="col-md-6">
+					<div class="card flex-md-row mb-4 box-shadow h-md-250">
+						<div class="card-body d-flex flex-column align-items-start">
+							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
+							<h3 class="mb-0">
 								<a class="text-dark" href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">Mime</a>
 							</h3>
 							<div class="mb-1 text-muted">Android Play Store - 2019</div>
-							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/mime-min.png"></div>
+							<a class="text-dark" href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/mime-min.png"></div></a>
 							<p class="card-text mb-auto midText">A platform which empowers people who lack photo/video editing skills to become a part of the meme conversation. </p>
 							<p class="card-text mb-auto downText">
 								Requirements Gathering, Prototyping, User Feedback, Android Development, Firebase Development, User Testing 
@@ -138,10 +162,33 @@
 					</div>
 				</div>
 
+			</div>
+
+			<div class="row mb-2">
+
 				<div class="col-md-6">
 					<div class="card flex-md-row mb-4 box-shadow h-md-250">
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
+							<h3 class="mb-0">
+								<a class="text-dark" href="https://drive.google.com/file/d/1JBZFCedsuWwECqDuQtfXcLK1wuzRsk0c/view?usp=sharing" target="_blank">Jamoora</a>
+							</h3>
+							<div class="mb-1 text-muted">SIC UIST - 2018</div>
+							<a class="text-dark" href="https://drive.google.com/file/d/1JBZFCedsuWwECqDuQtfXcLK1wuzRsk0c/view?usp=sharing" target="_blank">
+							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/jamoora-min.png"></div></a>
+							<p class="card-text mb-auto midText">A robot which can be controlled using music and speech.</p>
+							<p class="card-text mb-auto downText">
+								Animatronics, Speech Recognition, Parallel Processing 
+							</p>
+							<!-- <a href="">Continue Reading</a> -->
+						</div>
+
+					</div>
+				</div>
+
+				<!-- <div class="col-md-6">
+					<div class="card flex-md-row mb-4 box-shadow h-md-250">
+						<div class="card-body d-flex flex-column align-items-start">
 							<h3 class="mb-0">
 								<a class="text-dark" href="http://abhinavthukral.in/projects/beatdrop/" target="_blank">Beatdrop</a>
 							</h3>
@@ -151,11 +198,10 @@
 							<p class="card-text mb-auto downText">
 								Requirements Gathering, Paper Prototyping, User Feedback, HiFi Prototyping 
 							</p>
-							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
-				</div>
+				</div> -->
 
 			</div>
 
@@ -192,11 +238,10 @@
 
 			</div> -->
 
-			<div class="row mb-2">
+			<!-- <div class="row mb-2">
 				<div class="col-md-6">
 					<div class="card flex-md-row mb-4 box-shadow h-md-250">
 						<div class="card-body d-flex flex-column align-items-start">
-							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
 								<a class="text-dark" href="pages/autovend.html" target="_blank">Autovend</a>
 							</h3>
@@ -206,7 +251,6 @@
 							<p class="card-text mb-auto downText">
 								Information Architecture, Parallel Computing, Computer Vision 
 							</p>
-							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
@@ -215,7 +259,6 @@
 				<div class="col-md-6">
 					<div class="card flex-md-row mb-4 box-shadow h-md-250">
 						<div class="card-body d-flex flex-column align-items-start">
-							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
 								<a class="text-dark" href="pages/braille.html" target="_blank">Braille Printer</a>
 							</h3>
@@ -225,13 +268,15 @@
 							<p class="card-text mb-auto downText">
 								Arduino Sensors, Chassis Design  
 							</p>
-							<!-- <a href="">Continue Reading</a> -->
 						</div>
 
 					</div>
 				</div>
 
-			</div>
+			</div> -->
+
+
+
 		</div>
 
 
