--- a/pages/sherpa.html
+++ b/pages/sherpa.html
@@ -30,7 +30,7 @@
 
 	<nav class="navbar navbar-expand-lg navbar-light navbar-custom bg-white fixed-top">
 
-		<a class="navbar-brand" href="#top"><font color="#505050" family="Roboto">Varnit Jain</font></a>
+		<a class="navbar-brand" href="../index.html#top"><font color="#505050" family="Roboto">Varnit Jain</font></a>
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
