--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 			<div class="container">
 				<!-- <h1 class="display-4">Hi</h1> -->
 				<h1>Hi</h1>
-				<p>I am a postgraduate at Georgia Institute of Technology, working in the field of Human–Computer Interaction.
-					My objective is to help
+				<p>I am a postgraduate at Georgia Institute of Technology, working in the field of Human–Computer Interaction. I am looking for an internship for summer 2020 that will challenge me to solve everyday problems using creative solutions while enabling me to contribute, learn, and grow. My background in HCI and CS enables me to understand user needs and build technological opportunities that will help solve them.
+
+					<!-- My objective is to help
 					<span class="notice">&nbsp;Simplify&nbsp; </span> 
-					<!-- <font color="#AC3B61" ><em>Simplify</em></font>  -->
 					technology so that 
 					<span class="notice">novice developers can learn quickly</span>
 					and
-					<span class="notice">a new wave of people get access to technology.</span>
+					<span class="notice">a new wave of people get access to technology.</span> -->
 
 					<br><p font-size="5px"></p>
 				</p>
