--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="https://dl.acm.org/citation.cfm?id=3300286" target="_blank">Virtual Bricks</a>
+								<a class="text-dark" href="pages/virtual.html">Virtual Bricks</a>
 							</h3>
 							<div class="mb-1 text-muted">Full Paper CHI - 2019</div>
-							<a class="text-dark" href="https://dl.acm.org/citation.cfm?id=3300286" target="_blank">
+							<a class="text-dark" href="pages/virtual.html">
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/virtual-min.png"></div></a>
 							<p class="card-text mb-auto midText">A toolkit which allows VR developers to build a physical-manipulation enabled controller of any shape or size.</p>
 							<p class="card-text mb-auto downText">
