--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
 						<div class="card-body d-flex flex-column align-items-start">
 							<!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
 							<h3 class="mb-0">
-								<a class="text-dark" href="https://drive.google.com/file/d/1JBZFCedsuWwECqDuQtfXcLK1wuzRsk0c/view?usp=sharing" target="_blank">Jamoora</a>
+								<a class="text-dark" href="pages/jamoora.html">Jamoora</a>
 							</h3>
 							<div class="mb-1 text-muted">SIC UIST - 2018</div>
-							<a class="text-dark" href="https://drive.google.com/file/d/1JBZFCedsuWwECqDuQtfXcLK1wuzRsk0c/view?usp=sharing" target="_blank">
+							<a class="text-dark" href="pages/jamoora.html">
 							<div class="img_parent"><img class="card-img-right flex-auto d-md-block img-wrap" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="icons/jamoora-min.png"></div></a>
 							<p class="card-text mb-auto midText">A robot which can be controlled using music and speech.</p>
 							<p class="card-text mb-auto downText">
