--- a/pages/virtual.html
+++ b/pages/virtual.html
@@ -80,8 +80,8 @@
 					
 
 					<strong>Role</strong></br>
-				VR Experience Designer and Developer</br>
-				Arduino Developer
+				VR Experience Design and Development</br>
+				Arduino Development
 				<br><br>
 
 
@@ -103,7 +103,7 @@
 			</a></br></br>
 
 			<strong>Full Paper</strong></br> 
-			<a href="paper056.pdf
+			<a href="virtual-paper056.pdf
 			" target="_blank">
 			Download Link
 			</a></br></br>
