--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
 
 	<link rel="stylesheet" href="css/styles.css">
 
