--- a/pages/mime.html
+++ b/pages/mime.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>uNav | Varnit </title>
+	<title>Mime | Varnit </title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -58,7 +58,7 @@
 
 		<div class="jumbotron singPageTop" id="overview-tag">
 			<div class="container pagesContent">
-				<p class="pagesHeading"><strong>UNAV COMPATIBILITY MODE</strong></p>
+				<p class="pagesHeading"><strong>MIME</strong></p>
 
 			An accessibility mode which makes NCR's Kiosks more accessible for wheelchair users</br>
 
