--- a/pages/virtual.html
+++ b/pages/virtual.html
@@ -9,7 +9,7 @@
 
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600&display=swap" rel="stylesheet">
 
 
 	<link rel="stylesheet" href="../css/styles.css">
